<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.checkstyle</groupId>
  <artifactId>checkstyle-sonar-plugin-parent</artifactId>
  <version>3.5.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Checkstyle SonarQube plugin</name>
  <inceptionYear>2012</inceptionYear>
  <organization>
    <name>Checkstyle</name>
    <url>http://checkstyle.sourceforge.net</url>
  </organization>
  <licenses>
    <license>
      <name>LGPL-3.0</name>
      <url>https://www.gnu.org/licenses/lgpl-3.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>romani</id>
      <name>Roman Ivanov</name>
      <organization>Checkstyle</organization>
      <roles>
        <role>project admin, lead developer</role>
      </roles>
    </developer>
    <developer>
      <id>rnveach</id>
      <name>Richard Veach</name>
      <organization>Checkstyle</organization>
      <roles>
        <role>developer</role>
      </roles>
    </developer>
    <developer>
      <id>godin</id>
      <name>Evgeny Mandrikov</name>
      <organization>SonarSource</organization>
      <roles>
        <role>former developer</role>
      </roles>
    </developer>
    <developer>
      <id>m-g-sonar</id>
      <name>Michael Gumowski</name>
      <organization>SonarSource</organization>
      <roles>
        <role>former developer</role>
      </roles>
    </developer>
    <developer>
      <id>benzonico</id>
      <name>Nicolas Peru</name>
      <organization>SonarSource</organization>
      <roles>
        <role>former developer</role>
      </roles>
    </developer>
  </developers>

  <modules>
    <module>checkstyle-sonar-plugin</module>
    <module>checkstyle-all</module>
  </modules>

  <scm>
    <connection>scm:git:git@github.com:checkstyle/sonar-checkstyle.git</connection>
    <developerConnection>scm:git:git@github.com:checkstyle/sonar-checkstyle.git</developerConnection>
    <url>https://github.com/checkstyle/sonar-checkstyle</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/checkstyle/sonar-checkstyle/issues</url>
  </issueManagement>
  <ciManagement>
    <system>travis</system>
    <url>https://travis-ci.org/checkstyle/sonar-checkstyle</url>
  </ciManagement>

  <properties>
    <checkstyle.version>7.5.1</checkstyle.version>
    <sonar.version>5.6.4</sonar.version>
    <sonar-java.version>3.7</sonar-java.version>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <tagNameFormat>@{project.version}</tagNameFormat>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
